problema de padding corrigido

--- a/index.html
+++ b/index.html
@@ -15,8 +15,7 @@
     <nav>
         <a href="desafio3.html">Home</a>
         <a href="noticias.html">Notícias</a>
-        <a href="curiosidades.html">Curiosidades</a>
-        <a href="">Fale Conosco</a>
+        <a href="contato.html">Contato</a>
     </nav>
     <main>
         <article>
